<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/hat_bottom_sheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/head_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@drawable/birth_date_head"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:adjustViewBounds="true"/>

        <View
            android:id="@+id/decorator"
            android:layout_width="100dp"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/decorator_bottom_sheet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_more_coins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bd_more_coins"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/head_image"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="start"
            style="@style/TextTitle" />

        <TextView
            android:id="@+id/textView_promotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Акция действует с 15 по 25 августа"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_more_coins"
            android:layout_marginTop="10dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="start"
            android:textColor="@color/black"
            android:alpha="0.3"
            style="@style/LoyaltyDesc"/>

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/line_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_promotion" />

        <TextView
            android:id="@+id/textView_promotion_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bd_promotion_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="start"
            style="@style/LoyaltyDesc"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textView_promotion_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bd_promotion_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_promotion_info"
            android:layout_marginTop="10dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="start"
            style="@style/LoyaltyDesc"
            android:textColor="@color/black"/>

        <com.example.testprime.presentation.common.custom_view.CustomButton
            android:id="@+id/button_activate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/btn_activate"
            app:button_enabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_promotion_details" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/button_activate"
            app:layout_constraintEnd_toEndOf="@id/button_activate"
            app:layout_constraintStart_toStartOf="@id/button_activate"
            app:layout_constraintTop_toTopOf="@id/button_activate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>