<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/hat_bottom_sheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/decorator"
            android:layout_width="100dp"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/decorator_bottom_sheet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_birthday_soon"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="12dp"
            android:gravity="start"
            tools:text="@string/bd_birthday_soon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/decorator" />

        <TextView
            android:id="@+id/textView_promotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Акция действует с 15 по 25 августа"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_birthday_soon"
            android:layout_marginTop="10dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="start"
            android:textColor="@color/black"
            android:alpha="0.3"
            style="@style/LoyaltyDesc"/>

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/line_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_promotion" />

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="За 5 дней до, в сам день рождения, и 5 дней после скидка 10% на все блюда и 20% на заказ свыше 5000 ₽"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="start"
            style="@style/LoyaltyDesc"
            android:lineSpacingExtra="0.43sp"
            android:textColor="@color/black"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="18dp"
            android:foreground="@drawable/ripple_item_background"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_date">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView_card_dishes_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="11dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/imageView_product"
                    android:text="@string/bd_card_dishes_title"
                    style="@style/DishItem.Title"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/textView_card_dishes_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="11dp"
                    app:layout_constraintTop_toBottomOf="@id/textView_card_dishes_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/imageView_product"
                    android:text="@string/bd_card_dishes_desc"
                    style="@style/OnBoardingTextDesc"
                    android:textColor="@color/black"/>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_to_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_card_dishes_desc"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="9dp"
                    app:cardBackgroundColor="@color/color_transparent"
                    android:foreground="@drawable/ripple_item_background"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView_to_favorites"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_to_favorites"
                            style="@style/OnBoardingTextDesc"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="6dp"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <ImageView
                    android:id="@+id/imageView_product"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="5dp"
                    tools:src="@drawable/example_dish_1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.example.testprime.presentation.common.custom_view.CustomButton
            android:id="@+id/button_great"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/btn_great"
            app:button_enabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>